--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "{{project-name}}",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+     "start": "nodemon -r dotenv/config index.js"
   },
   "author": "",
   "license": "ISC",
